--- a/DeepRacer Log Analysis.ipynb
+++ b/DeepRacer Log Analysis.ipynb
@@ -31,10 +31,10 @@
    "source": [
     "############################################\n",
     "AWS_PROFILE = 'heroacademy' # Change back to 'default'\n",
-    "model_name = 'MikeDevModel28'\n",
-    "training_stream_name = 'sim-6m2clz471djk'\n",
-    "evaluation_stream_name = 'sim-vglxp7ygyxlm'\n",
-    "track_name = 'reinvent_base'\n",
+    "model_name = 'MikeDevModel28' # Your trained model name\n",
+    "training_stream_name = 'sim-6m2clz471djk' # Training Stream Name in RoboMaker\n",
+    "evaluation_stream_name = 'sim-vglxp7ygyxlm' # Evaluation Stream Name in RoboMaker\n",
+    "track_name = 'reinvent_base' # Training Track Name\n",
     "############################################\n",
     "gpath = f'graphs/{model_name}'\n",
     "ipath = f'intermediate_checkpoint/{model_name}'\n",
@@ -74,10 +74,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_bucket = !grep \"S3 bucket\" $training_fname\n",
-    "s3_prefix = !grep \"S3 prefix\" $training_fname\n",
-    "s3_bucket = s3_bucket[0].split(':')[1].strip()\n",
-    "s3_prefix = s3_prefix[0].split(':')[1].strip()"
+    "try:\n",
+    "    s3_bucket = !grep \"S3 bucket\" $training_fname\n",
+    "    s3_prefix = !grep \"S3 prefix\" $training_fname\n",
+    "    s3_bucket = s3_bucket[0].split(':')[1].strip()\n",
+    "    s3_prefix = s3_prefix[0].split(':')[1].strip() \n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    pass"
    ]
   },
   {
@@ -1312,6 +1316,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
